on-prem/2-Tier-deployment/manifest/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mobile-developers 
---
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-developers
