on-prem/2-Tier-deployment/manifest/frontend-developers-cic.yaml
apiVersion: v1
kind: Pod
metadata:
  name: cic-vpx
  labels:
    app: cic-vpx
spec: 
      serviceAccountName: frontenddeveloper-cpx
      containers:
      - name: cic-vpx
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.7.6"
        args:
          - --ingress-classes
            vpx-frontend
          - --feature-node-watch
            true
        imagePullPolicy: IfNotPresent
