on-prem/2-Tier-deployment/manifest/frontend-developers-cpx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress
spec:
  selector:
    matchLabels:
      app: cpx-ingress
  replicas: 1
  template:
    metadata:
      name: cpx-ingress
      labels:
        app: cpx-ingress
      annotations:
    spec:
      serviceAccountName:  frontenddeveloper-cpx
      containers:
        - name: cpx-ingress
          image: "quay.io/citrix/citrix-k8s-cpx-ingress:13.0-47.103"
          securityContext:
             privileged: true
          imagePullPolicy: Always
        # Add cic as a sidecar
        - name: cic
          image: "quay.io/citrix/citrix-k8s-ingress-controller:1.7.6"
          args:
            - --ingress-classes
              frontend
          imagePullPolicy: Always

---

apiVersion: v1
kind: Service
metadata:
  name: lb-service-frontend
  labels:
    app: lb-service-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
  - port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: cpx-ingress
