on-prem/2-Tier-deployment/manifest/frontend-developers-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vpx
  annotations:
   kubernetes.io/ingress.class: "cic-vpx-frontend"
   ingress.citrix.com/insecure-termination: "disallow"
   ingress.citrix.com/frontend-ip: "10.105.158.196"
   ingress.citrix.com/secure_backend: '{"lb-service-frontend": "True"}'
spec:
  tls:
  - secretName: frontend-secret
  rules:
  - host:  frontend.agiledevelopers.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lb-service-frontend
            port:
              number: 443
