on-prem/2-Tier-deployment/manifest/mobile-developers-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mobile
  labels:
    app: mobile
spec:
  selector:
    matchLabels:
      app: mobile
  replicas: 2 
  template:
    metadata:
      labels:
        app: mobile
    spec:
      containers:
      - name: mobile
        image: quay.io/sample-apps/hotdrinks:v1
        ports:
        - name: hotdrinks-80
          containerPort: 80
        - name: hotdrinks-443
          containerPort: 443
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: mobile-developers
spec:
  ports:
  - name: hotdrinks-80
    port: 80
    targetPort: 80
  - name: hotdrinks-443
    port: 443
    targetPort: 443
  selector:
    app: mobile

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mobile-ingress
  annotations:
   kubernetes.io/ingress.class: "vpx-mobile"
spec:
  tls:
  - secretName: mobile-secret
  defaultBackend:
    service:
       name: mobile-developers
       port: 
         number: 80
---
