on-prem/2-Tier-deployment/manifest/mobile-developers-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-vpx
  annotations:
   kubernetes.io/ingress.class: "vpx-mobile"
   ingress.citrix.com/insecure-termination: "redirect"
   ingress.citrix.com/frontend-ip: "10.105.158.195"
   ingress.citrix.com/secure_backend: '{"lb-service-mobile": "True"}'
spec:
  tls:
  - secretName: mobile-secret
  rules:
  - host:  mobile.agiledevelopers.com
    http:
      paths:
      - path: 
        backend:
          serviceName: lb-service-mobile
          servicePort: 443
